refactored to chrome extension

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,13 @@
     <meta charset="utf-8">
     <title>Photo Album</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <link rel='stylesheet' type='text/css' href='style.css'>
     <script src="https://fb.me/react-with-addons-0.14.6.js"></script>
     <script src="https://fb.me/react-dom-0.14.6.js"></script>
     <script src='https://code.jquery.com/jquery-3.1.1.min.js'></script>
+    <style type="text/css">
+    body {width:200; height:300;}
+    </style>
   </head>
   <body>
     <script type="text/babel" src="./component/Home/Home.jsx"></script>
